--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "react-use-websocket": "^4.13.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
